[tool.poetry]
name = "reverse-geocode"
version = "0.1.0"
description = ""
authors = ["Payson Wallach <payson@paysonwallach.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.3"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
